Sidemenu overflow fix, tabparent index fix

--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
@@ -95,7 +95,7 @@ $sidemenu-popuot-background: #1e1e1e;
   max-width: $sidemenu-max-width;
   background: $sidemenu-background-color;
   flex-direction: column;
-  overflow: visible;
+  overflow: auto;
   z-index: 999 !important;
   input { box-sizing: border-box; }
   ul { //reset
